{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 19,
  "lineage": "fce48d0c-de28-698d-87c5-1b509fb09b20",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:065882629333:network-acl/acl-0c77ea7306c7da3a8",
            "default_network_acl_id": "acl-0c77ea7306c7da3a8",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0c77ea7306c7da3a8",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "065882629333",
            "subnet_ids": [
              "subnet-015a7cde58023fad2",
              "subnet-018e1e063b3af7197",
              "subnet-0d030f7dd403c0af1"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "ecommerce-vpc",
              "Project": "ecommerce"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ecommerce-vpc",
              "Project": "ecommerce"
            },
            "vpc_id": "vpc-015872b03a2b35baa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:065882629333:route-table/rtb-0aac8ed0d75422a98",
            "default_route_table_id": "rtb-0aac8ed0d75422a98",
            "id": "rtb-0aac8ed0d75422a98",
            "owner_id": "065882629333",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "ecommerce-vpc",
              "Project": "ecommerce"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ecommerce-vpc",
              "Project": "ecommerce"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-015872b03a2b35baa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:065882629333:security-group/sg-0905c20ffb3e0221d",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0905c20ffb3e0221d",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "065882629333",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "ecommerce-vpc",
              "Project": "ecommerce"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ecommerce-vpc",
              "Project": "ecommerce"
            },
            "vpc_id": "vpc-015872b03a2b35baa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:065882629333:internet-gateway/igw-0d9d533c9290da6a4",
            "id": "igw-0d9d533c9290da6a4",
            "owner_id": "065882629333",
            "tags": {
              "Environment": "dev",
              "Name": "ecommerce-vpc",
              "Project": "ecommerce"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ecommerce-vpc",
              "Project": "ecommerce"
            },
            "vpc_id": "vpc-015872b03a2b35baa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d9d533c9290da6a4",
            "id": "r-rtb-00948cf64ec92457d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00948cf64ec92457d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:065882629333:route-table/rtb-0b1b8c80252ed8ef1",
            "id": "rtb-0b1b8c80252ed8ef1",
            "owner_id": "065882629333",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "ecommerce-vpc",
              "Project": "ecommerce"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ecommerce-vpc",
              "Project": "ecommerce"
            },
            "timeouts": null,
            "vpc_id": "vpc-015872b03a2b35baa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:065882629333:route-table/rtb-00eb81121af08d7b0",
            "id": "rtb-00eb81121af08d7b0",
            "owner_id": "065882629333",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "ecommerce-vpc",
              "Project": "ecommerce"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ecommerce-vpc",
              "Project": "ecommerce"
            },
            "timeouts": null,
            "vpc_id": "vpc-015872b03a2b35baa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:065882629333:route-table/rtb-00948cf64ec92457d",
            "id": "rtb-00948cf64ec92457d",
            "owner_id": "065882629333",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "ecommerce-vpc",
              "Project": "ecommerce"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ecommerce-vpc",
              "Project": "ecommerce"
            },
            "timeouts": null,
            "vpc_id": "vpc-015872b03a2b35baa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4720fd748fb1b03",
            "route_table_id": "rtb-0b1b8c80252ed8ef1",
            "subnet_id": "subnet-018e1e063b3af7197"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0447ea69cab5a4242",
            "route_table_id": "rtb-00eb81121af08d7b0",
            "subnet_id": "subnet-015a7cde58023fad2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-045b0bb9909e6f6b4",
            "route_table_id": "rtb-00948cf64ec92457d",
            "subnet_id": "subnet-0d030f7dd403c0af1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08fe092a95648990f",
            "route_table_id": "rtb-00948cf64ec92457d",
            "subnet_id": "subnet-0b7efc494835e895e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:065882629333:subnet/subnet-018e1e063b3af7197",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018e1e063b3af7197",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "065882629333",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "ecommerce-vpc",
              "Project": "ecommerce"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ecommerce-vpc",
              "Project": "ecommerce"
            },
            "vpc_id": "vpc-015872b03a2b35baa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:065882629333:subnet/subnet-015a7cde58023fad2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015a7cde58023fad2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "065882629333",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "ecommerce-vpc",
              "Project": "ecommerce"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ecommerce-vpc",
              "Project": "ecommerce"
            },
            "vpc_id": "vpc-015872b03a2b35baa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:065882629333:subnet/subnet-0d030f7dd403c0af1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d030f7dd403c0af1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "065882629333",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "ecommerce-vpc",
              "Project": "ecommerce"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ecommerce-vpc",
              "Project": "ecommerce"
            },
            "vpc_id": "vpc-015872b03a2b35baa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:065882629333:subnet/subnet-0b7efc494835e895e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b7efc494835e895e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "065882629333",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "ecommerce-vpc",
              "Project": "ecommerce"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ecommerce-vpc",
              "Project": "ecommerce"
            },
            "vpc_id": "vpc-015872b03a2b35baa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:065882629333:vpc/vpc-015872b03a2b35baa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c77ea7306c7da3a8",
            "default_route_table_id": "rtb-0aac8ed0d75422a98",
            "default_security_group_id": "sg-0905c20ffb3e0221d",
            "dhcp_options_id": "dopt-0fe88fbbb33844d96",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-015872b03a2b35baa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aac8ed0d75422a98",
            "owner_id": "065882629333",
            "tags": {
              "Environment": "dev",
              "Name": "ecommerce-vpc",
              "Project": "ecommerce"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ecommerce-vpc",
              "Project": "ecommerce"
            }
          }
        }
      ]
    }
  ]
}